--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,6 +9,9 @@
   <strong>Number of pages:</strong>
   <%= @book.number_of_pages %>
 </p>
+<p>
+  <%= image_tag @book.image, width: "200" %>
+</p>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
