--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -3,3 +3,7 @@
 <p><%= current_user.email %></p>
 <p><label>Name</label> <%= current_user.name %></p>
 <p><label>Age</label> <%= current_user.age %></p>
+<% if current_user.avatar.attached? %>
+    <label>Avatar:</label>
+    <%= image_tag current_user.avatar, width: "200" %>
+<% end %>
